[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.70.0",
    "nltk==3.9.1",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]

[tool.ruff.lint]
# D100-D107 are all the "Missing Docstring" rules
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.ruff.lint.isort]
# This makes Ruff's import sorter behave like the "isort" tool
combine-as-imports = true
force-single-line = false