[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.70.0",
    "nltk==3.9.1",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]

[tool.ruff.lint]
select = ["E", "F", "D", "B", "SIM", "I", "UP", "S", "N"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203","D213",
    "E501", 
    "S301"
]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false